--- a/hotelCost.html
+++ b/hotelCost.html
@@ -61,8 +61,8 @@
                     <input type="date" class="form-control" id="checkInDate" placeholder="">
                 </div>
                 <div class="form-group col-md-6">
-                    <label for="numDays">Number of days: </label>
-                    <input type="number" class="form-control" id="numDays" placeholder="">
+                    <label for="numNights">Number of nights: </label>
+                    <input type="number" class="form-control" id="numNights" placeholder="">
                 </div>
             </div>
             <div class="row">
@@ -81,8 +81,8 @@
             </div>
             <p>Optional Discounts:</p>
             <div class="btn-group btn-group-toggle text-center" data-toggle="buttons">
-                <label class="btn btn-secondary active">
-                    <input type="radio" name="discount" id="aaa" autocomplete="off" checked> AAA
+                <label class="btn btn-secondary">
+                    <input type="radio" name="discount" id="aaa" autocomplete="off"> AAA
                 </label>
                 <label class="btn btn-secondary">
                     <input type="radio" name="discount" id="senior" autocomplete="off"> Senior
@@ -90,7 +90,12 @@
                 <label class="btn btn-secondary">
                     <input type="radio" name="discount" id="military" autocomplete="off"> Military
                 </label>
+                <label class="btn btn-secondary active">
+                    <input type="radio" name="discount" id="noDiscount" autocomplete="off" checked> No Discount
+                </label>
             </div>
+
+            <!-- Calculate Button -->
             <button id="getPrice" type="button" class="btn btn-primary float-right">Get Quote</button>
             <div class="row dates">
                 <div class="form-group col-md-6">
@@ -102,7 +107,24 @@
                     <input type="text" class="form-control" id="checkOut" placeholder="" disabled>
                 </div>
             </div>
-
+            <div class="form-group">
+                <label for="subtotal">Subtotal: </label>
+                <input type="text" class="form-control" id="subtotal" placeholder="" disabled>
+            </div>
+            <div class="row">
+                <div class="form-group col-md-6">
+                    <label for="totalDiscount">Discount: </label>
+                    <input type="text" class="form-control" id="totalDiscount" placeholder="" disabled>
+                </div>
+                <div class="form-group col-md-6">
+                    <label for="tax">Tax: </label>
+                    <input type="text" class="form-control" id="tax" placeholder="" disabled>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="totalHotelCost">Total Cost: </label>
+                <input type="text" class="form-control" id="totalHotelCost" placeholder="" disabled>
+            </div>
 
         </form>
     </main>
