--- a/hotelCost.html
+++ b/hotelCost.html
@@ -58,7 +58,7 @@
             <div class="row">
                 <div class="form-group col-md-6">
                     <label for="checkInDate">Check-in date: </label>
-                    <input type="date" class="form-control" id="checkInDate" placeholder="">
+                    <input type="date" class="form-control" id="checkInDate">
                 </div>
                 <div class="form-group col-md-6">
                     <label for="numDays">Number of days: </label>
@@ -82,13 +82,13 @@
             <p>Optional Discounts:</p>
             <div class="btn-group btn-group-toggle text-center" data-toggle="buttons">
                 <label class="btn btn-secondary active">
-                    <input type="radio" name="discount" id="aaa" autocomplete="off" checked> AAA
+                    <input type="radio" name="discount" id="aaa" checked> AAA
                 </label>
                 <label class="btn btn-secondary">
-                    <input type="radio" name="discount" id="senior" autocomplete="off"> Senior
+                    <input type="radio" name="discount" id="senior"> Senior
                 </label>
                 <label class="btn btn-secondary">
-                    <input type="radio" name="discount" id="military" autocomplete="off"> Military
+                    <input type="radio" name="discount" id="military"> Military
                 </label>
             </div>
             <button id="getPrice" type="button" class="btn btn-primary float-right">Get Quote</button>
