--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <a class="btn btn-outline-dark" href="futurevalue.html">Get started</a>
                 </div>
                 <div class="col-md">
-                    <img src="images/moneybag.jpg" alt="money pic" class="img border border-dark rounded-circle" />
+                    <img src="images/camera.jpg" alt="camera pic" class="img border border-dark rounded-circle" />
                     <h2 class="display-4 subheadings">Attractions</h2>
                     <p class="description text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     <a class="btn btn-outline-dark" href="presentvalue.html">Get started</a>
