reconcile to master

--- a/hotelCost.html
+++ b/hotelCost.html
@@ -81,8 +81,8 @@
             </div>
             <p>Optional Discounts:</p>
             <div class="btn-group btn-group-toggle text-center" data-toggle="buttons">
-                <label class="btn btn-secondary active">
-                    <input type="radio" name="discount" id="aaa" checked> AAA
+                <label class="btn btn-secondary">
+                    <input type="radio" name="discount" id="aaa" autocomplete="off"> AAA
                 </label>
                 <label class="btn btn-secondary">
                     <input type="radio" name="discount" id="senior"> Senior
